third_party/move/move-compiler-v2/tests/reference-safety/bug_13488_err.no-opt.exp

Diagnostics:
error: ambiguous usage of local `x` since it is still being borrowed
  ┌─ tests/reference-safety/bug_13488_err.move:9:9
  │
9 │         *z = x;
  │         ^^^^^^ ambiguous usage here, try an explicit annotation, e.g. 'move `x`' or 'copy `x`'

error: ambiguous usage of local `x` since it is still being borrowed
   ┌─ tests/reference-safety/bug_13488_err.move:16:18
   │
16 │         let _v = vector[x];
   │                  ^^^^^^ ambiguous usage here, try an explicit annotation, e.g. 'move `x`' or 'copy `x`'
